config options for oro